--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:fitsSystemWindows="true"
     android:layout_height="match_parent">
 
     <fragment
+        android:fitsSystemWindows="true"
         android:id="@+id/choose_area_fragment"
         android:name="cn.com.gree.weather.ui.ChooseAreaFragment"
         android:layout_width="match_parent"
